--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "sort_vis"
 version = "0.1.0"
-authors = ["Guillaume DALLENNE <dallenneguillaume@gmail.com>"]
-edition = "2018"
+authors = ["Guillaume Dallenne <dallenneguillaume@gmail.com>"]
+edition = "2021"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-flume = "0.10"
-nannou = "0.17"
-threadpool = "1"
+flume = "0.10.14"
+nannou = "0.18.1"
+threadpool = "1.8.1"
