--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,9 +2,7 @@ name: Release
 
 on:
   push:
-    branches: [ master ]
     tags: [ "**" ]
-  workflow_dispatch:
 
 env:
   CARGO_TERM_COLOR: always
@@ -13,14 +11,16 @@ jobs:
   release:
     strategy:
       matrix:
-        os: [ ubuntu-latest, macos-latest, windows-latest ]
         include:
           - os: ubuntu-latest
-            suffix: linux
+            name_suffix: linux
+            path_suffix: ""
           - os: macos-latest
-            suffix: macos
+            name_suffix: macos
+            path_suffix: ""
           - os: windows-latest
-            suffix: windows.exe
+            name_suffix: windows
+            path_suffix: .exe
 
     runs-on: ${{ matrix.os }}
 
@@ -33,5 +33,5 @@ jobs:
       - run: cargo build --release
       - uses: actions/upload-artifact@v3
         with:
-          name: sort_vis_${{ matrix.suffix }}
-          path: target/release/sort_vis
+          name: sort_vis_${{ matrix.name_suffix }}
+          path: target/release/sort_vis${{ matrix.path_suffix }}
