--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,4 +20,4 @@ jobs:
           rust-version: nightly
           components: rustfmt,clippy
       - uses: Swatinem/rust-cache@v2
-      - run: ci.sh
+      - run: ./ci.sh
