--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,20 +42,13 @@ jobs:
 
     steps:
       - uses: actions/download-artifact@v3
-        with:
-          name: sort_vis_linux
-          path: sort_vis_linux
-      - uses: actions/download-artifact@v3
-        with:
-          name: sort_vis_macos
-          path: sort_vis_macos
-      - uses: actions/download-artifact@v3
-        with:
-          name: sort_vis_windows
-          path: sort_vis_windows.exe
+      - run: |
+          zstdmt -10 sort_vis_linux/sort_vis -o sort_vis_linux.zst
+          zstdmt -10 sort_vis_macos/sort_vis -o sort_vis_macos.zst
+          zip sort_vis_windows.zip sort_vis_windows/sort_vis.exe
       - uses: softprops/action-gh-release@v1
         with:
           files: |
-            sort_vis_linux
-            sort_vis_macos
-            sort_vis_windows.exe
+            sort_vis_linux.zst
+            sort_vis_macos.zst
+            sort_vis_windows.zip
