--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,6 @@ on:
     branches: [ master ]
 
 env:
-  CI: 1
   CARGO_TERM_COLOR: always
 
 jobs:
@@ -25,5 +24,7 @@ jobs:
           rust-version: nightly
           components: rustfmt,clippy
       - uses: Swatinem/rust-cache@v2
-      - run: ./ci.sh
+      - run: |
+          cargo install cargo-sort
+          ./ci.sh
         shell: bash
